example/secondfile/objects/VLAN_Information__c.object
<CustomObject>
    <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information</description>
    <fields>
        <fullName>ASE_VLAN_Circuit_ID_Serial__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>ASE-VLAN Circuit ID-Serial</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Add_VLAN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to indicate record was created due to Add VLAN MACD Change. This field is not required on Page layout.</description>
        <label>Add VLAN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_EVC_Destination_Port__c</fullName>
        <label>BID EVC Destination Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BID_EVC_Source_Port__c</fullName>
        <label>BID EVC Source Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Policing__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Ingress COS Class Option-COS Policing</description>
        <label>COS Policing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Queing__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Egress COS Class Option-COS Queing</description>
        <label>COS Queing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COS_Shaping__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Egress COS Class Option-COS Shaping</description>
        <label>COS Shaping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_and_VLAN_Details__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information</description>
        <label>Circuit and VLAN Details</label>
        <referenceTo>Circuit_and_VLAN_Details__c</referenceTo>
        <relationshipName>VLAN_Information</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Version_on_Premise__c</fullName>
        <description>Technical field not required on page layout</description>
        <formula>Circuit_and_VLAN_Details__r.Current_Version_on_Premise__c</formula>
        <label>Current Version on Premise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_Tag_Bottom__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VLAN Tag Data-Customer VLAN Tag Bottom</description>
        <label>Customer VLAN Tag Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_VLAN_Tag_Top__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VLAN Tag Data-Customer VLAN Tag Top</description>
        <label>Customer VLAN Tag Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disconnected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate the VLAN was disconnected during a MACD change operation.</description>
        <label>Disconnected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EVC_Destination_Port__c</fullName>
        <description>EVC Destination Site ID from BID (Terminating Port for EVC)</description>
        <label>EVC Destination Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVC_Lata__c</fullName>
        <label>EVC Lata</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTERLATA</fullName>
                </value>
                <value>
                    <fullName>INTRALATA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EVC_Source_Port__c</fullName>
        <description>EVC Source site ID from BID(Current Site ID)</description>
        <label>EVC Source Port</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVC_State__c</fullName>
        <label>EVC State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTERSTATE</fullName>
                </value>
                <value>
                    <fullName>INTRASTATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Egress_COS_Class_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Egress COS Class Option-Egress COS Class Name</description>
        <label>Egress COS Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_COS_Profile_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Egress COS Profile ID</description>
        <label>Egress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Egress_PPCOS__c</fullName>
        <label>Egress-PPCOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-External ID</description>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTAR_Order_Number_Formula__c</fullName>
        <formula>IF( Circuit_and_VLAN_Details__r.Premise__r.Service_Type__c != &apos;ASE&apos;, Circuit_and_VLAN_Details__r.Premise__r.Premise_Number__c + Circuit_and_VLAN_Details__r.Premise__r.INSTAR_OrderNumber_Serial__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INSTAR Order Number-Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INSTAR_Order_Number__c</fullName>
        <label>INSTAR Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Version__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-IP Version</description>
        <label>IP Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Class_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Ingress COS Class Option-Ingress COS Class Name</description>
        <label>Ingress COS Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_COS_Profile_ID__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-Ingress COS Profile ID</description>
        <label>Ingress COS Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingress_PPCOS__c</fullName>
        <label>Ingress-PPCOS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACD_Type__c</fullName>
        <description>This is a technical field to indicate that record has been created due to MACD Disconnect. Not required on page layout.</description>
        <label>MACD Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_VLAN_Tag_Bottom__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VLAN Tag Data-Network VLAN Tag Bottom</description>
        <label>Network VLAN Tag Bottom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_VLAN_Tag_Top__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VLAN Tag Data-Network VLAN Tag Top</description>
        <label>Network VLAN Tag Top</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortID__c</fullName>
        <label>PortID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_MTU__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-MTU Data-Provider MTU</description>
        <label>Provider MTU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_IP_Address__c</fullName>
        <label>Reference IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_Group_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-MTU Data-Route Group Number</description>
        <label>Route Group Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Site_Indicator__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-MTU Data-Service Site Indicator</description>
        <label>Serving Site Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USO_Number__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-External Connection Identifier-USO Number</description>
        <label>USO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V4_Customer_MTU__c</fullName>
        <description>Premise Deatails-Circuit and VLAN Deatails-VLAN Information- MTU Data-V4 Customer MTU</description>
        <label>V4 Customer MTU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V6_Customer_MTU__c</fullName>
        <description>Premise Deatails-Circuit and VLAN Deatails-VLAN Information- MTU Data-V6 Customer MTU</description>
        <label>V6 Customer MTU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLANID_Auto__c</fullName>
        <displayFormat>VLAN00{0000000000}</displayFormat>
        <label>VLANID_Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>VLANID__c</fullName>
        <label>VLANID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Circuit_ID__c</fullName>
        <label>VLAN Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Premise_Number__c</fullName>
        <description>This is a technical field tp capture Premise number at VLAN level. Not required on page layout.</description>
        <formula>Circuit_and_VLAN_Details__r.CVLAN_Premise_Number__c</formula>
        <label>VLAN Premise Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Speed__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-External Connection Identifier-VLAN Speed</description>
        <label>VLAN Speed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VLAN_Status__c</fullName>
        <label>VLAN Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Disconnect</fullName>
                </value>
                <value>
                    <fullName>Pending Add</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VPN_Connection_Type__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VPN-VPN Connection Type</description>
        <label>VPN Connection Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_Name__c</fullName>
        <description>Premise Details-Premise Data-Circuit and VLAN Details-VLAN Information-VPN-VPN Name</description>
        <label>VPN Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPN_SalesForce_Dot_Com_ID__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(VPN_Name__c)),OR(Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c = &quot;SwitchedEthernet&quot;,Circuit_and_VLAN_Details__r.Premise__r.Transport_Type__c = &quot;DedicatedEthernet&quot;)) , Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.SFDC_Account_End_Customer_ID_AEJ_ID__c, NULL)</formula>
        <label>VPN SalesForce Dot Com ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Record_Id__c</fullName>
        <description>Technical Field to capture validation record sfdc id in case of add vlan. To identify the validation record due to which this record was created. Technical field, not required on page layout.</description>
        <label>Validation Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VlanAccessProvisioningIndicator__c</fullName>
        <label>VlanAccessProvisioningIndicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VlanAccessSpeed__c</fullName>
        <description>Custom object to store the VLAN Access speed</description>
        <label>VlanAccessSpeed</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>e2eVPNkey__c</fullName>
        <label>e2eVPNkey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RDS-VLAN Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VLAN - {0000000}</displayFormat>
        <label>VLAN Information  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-VLAN Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lookup_to_CVLAN_cannot_be_updated_onVLAN</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Circuit_and_VLAN_Details__c )</errorConditionFormula>
        <errorMessage>The reference to Circuit and VLAN Details cannot be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RDS_Edit_Expired</fullName>
        <active>true</active>
        <description>RDS Edit Expired</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt;&quot;SI_API User&quot; ,
(OR(If(Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.Edit_Expired_Date__c&lt;NOW(),True,False),ISPICKVAL( Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.RDS_object_status__c ,&quot;Review completed&quot;))),
		$Profile.Name &lt;&gt;&quot;SI_API User&quot;,
                $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot;, 
		$Profile.Name &lt;&gt;&quot;System Administrator&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM_DEV_OPS&quot;,
$Profile.Name &lt;&gt;&quot;SI_EBM Admin&quot;)</errorConditionFormula>
        <errorMessage>Edit Time has elapsed . Please contact EBM Admin .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Lock_after_Deal_Hash_creation_VLN</fullName>
        <active>true</active>
        <errorConditionFormula>Circuit_and_VLAN_Details__r.Premise__r.DealHash__r.IsDealHashCreationSuccess__c = true &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name&lt;&gt;&quot;ATT Partner Community User&quot; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_API User&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;SI_EBM_DEV_OPS&apos; &amp;&amp; NOT( ISNEW())</errorConditionFormula>
        <errorMessage>Record cannot be updated after Deal Hash has been created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_for_Non_MACD_D_VLAN</fullName>
        <active>true</active>
        <description>This validation rule will prevent creation of records for SI EBM Admin and EBM DEV OPs profile when the record is not of MACD Disconnect type</description>
        <errorConditionFormula>AND(MACD_Type__c &lt;&gt; &apos;D&apos;, MACD_Type__c &lt;&gt; &apos;C&apos;, 
OR($Profile.Name = &apos;SI_EBM_DEV_OPS&apos;,$Profile.Name = &apos;SI_EBM Admin&apos;), 
ISNEW() )</errorConditionFormula>
        <errorMessage>You do not have permission to create a new RDS-VLAN Information record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Updates_for_DevOps_Vlan</fullName>
        <active>false</active>
        <description>EBM DEV Ops Profile users should not be able to update following fields under RDS-VLAN Information object : 
EVC Source Port
EVC Destination Port
VLAN Circuit ID
External ID
VLAN Speed</description>
        <errorConditionFormula>AND(NOT(ISNEW()), 
$Profile.Name = &apos;SI_EBM_DEV_OPS&apos;, 
OR(ISCHANGED(EVC_Source_Port__c),ISCHANGED(EVC_Destination_Port__c),ISCHANGED(VLAN_Circuit_ID__c),ISCHANGED(External_ID__c),ISCHANGED(VLAN_Speed__c)))</errorConditionFormula>
        <errorMessage>Your profile does not have permission to edit the following fields on this object : EVC Source Port, EVC Destination Port, VLAN Circuit ID, External ID, VLAN Speed</errorMessage>
    </validationRules>
</CustomObject>